@@ -19,7 +19,8 @@ SLOT="0"
 KEYWORDS="~amd64 ~x86"
 IUSE="test"
 
-DEPEND="test? ( dev-python/pytest[${PYTHON_USEDEP}]  )"
+DEPEND="dev-python/setuptools[${PYTHON_USEDEP}]
+		test? ( dev-python/pytest[${PYTHON_USEDEP}]  )"
 RDEPEND=""
 
 python_test() {
