@@ -2,6 +2,10 @@
 # Copyright 1999-2016 Gentoo Foundation; Distributed under the GPL v2
 # $Id$
 
+  13 Feb 2016; Johann Schmitz <ercpe@gentoo.org> pyrpn-0.1_pre20160205.ebuild,
+  pyrpn-0.1_pre20160207.ebuild:
+  dev-python/pyrpn: Added missing setuptools
+
 *pyrpn-0.1_pre20160207 (07 Feb 2016)
 
   07 Feb 2016; Johann Schmitz <ercpe@gentoo.org> +pyrpn-0.1_pre20160207.ebuild:
